--- a/ArvoreRubroNegra/.project
+++ b/ArvoreRubroNegra/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ArvoreRubroNegra</name>
+	<name>DataStructures</name>
 	<comment></comment>
 	<projects>
 	</projects>
